--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "method-override": "^2.3.10",
     "mongoose": "^5.0.0-rc1"
   }
 }
